--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,39 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Dependencies
+node_modules/
+
+# Build output
+dist/
+dist-ssr/
+build/
+.out/
+
+# Local environment files
+.env
+.env.local
+.env.*.local
+
+# OS / system files
+.DS_Store
+Thumbs.db
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Supabase (local dev)
+.supabase/
+
+# Lovable local cache (if exists)
+.lovable/
+
+# Misc
+*.local
